tests/NormalTests/paczka1/small_fuzzy/34027122.err
Error in line 3: 80IRvT9FVV A740 9,9
Error in line 12: KTkrV9uBS A740 48,1
